# Eventer

./: .gitignore  README.md  pyproject.toml  requirements.txt
Bot/: __init__.py  __main__.py
Bot/Cogs/: admin.py  catan_explorer.py  pokemon_go.py  wizards_unite.py
Bot/cogs/: admin.py  catan.py  catan_explorer.py  eventer.py  other.py  pokemon_go.py  wizards_unite.py  world_explorers.py
Calendar/: __init__.py  __main__.py  attendee.py
Calendar/Events/: __init__.py  base_event.py  catan_explorer.py  pokemon_go.py  wizards_unite.py
Data/: __init__.py  base_event.py  catan_explorer.py  pokemon_go.py  wizards_unite.py
Database/: __init__.py  __main__.py  database.py  enum_converter.py
Eventer/: __init__.py  __main__.py  base_event.py
Eventer/CatanExplorer/: __init__.py  event.py
Eventer/PokemonGo/: __init__.py  event.py
Eventer/WizardsUnite/: __init__.py  event.py
Events/Catan World Explorers/: 2020-08-01-Catanian_Carnival.yaml
Events/Harry Potter Wizards Unite/: 2020-06-16-One_Year_Later.yaml  2020-06-26-Wizarding_Weekend.yaml  2020-06-30-Baby_Beasts.yaml  2020-07-11-Community_Day.yaml  2020-07-24-Wizarding_Weekend.yaml  2020-07-28-Fantastic_Flora_&_Fauna.yaml  2020-08-08-Community_Day.yaml  2020-08-11-Brilliant_Event_Part_One.yaml  2020-08-21-Wizarding_Weekend.yaml  2020-08-25-Brilliant_Event_Part_Two.yaml  2020-09-04-Wizarding_Weekend.yaml  2020-09-08-Brilliant_Event_Part_One.yaml  2020-09-08-Dragon_Event.yaml  2020-09-15-Brilliant_Event_Part_One.yaml  2020-09-19-Community_Day.yaml  2020-09-22-Brilliant_Event_Part_Two.yaml  (+4 more)
(+148 files in other folders)
