[tool.poetry]
name = "Eventer"
version = "2.2.0"
description = "Adds events to a Google Calendar, by filling out a Google Form you will be invited to all the Events of the type you select."
authors = ["Macro303 <macro303@pm.me>"]

[tool.poetry.dependencies]
python = "^3.8"
PyInstaller = "^3.6"
PyYAML = "^5.3.1"
google-api-python-client = "^1.10.0"
google-auth-httplib2 = "^0.0.4"
google-auth-oauthlib = "^0.4.1"
pytz = "^2020.1"
"discord.py" = "^1.3.4"
flask = "^1.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
